# smol-paste

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  development.md  main.spec  pyproject.toml
assets/: icon.icns
src/smol_paste/: __init__.py  smol_paste.py
tests/: test_smol_paste.py
