[project]
name = "smol-paste"
version = "0.0.1"
description = "A simple image optimization and clipboard tool"
authors = [{ name = "Namuan", email = "namuan@deskriders.dev" }]
readme = "README.md"
keywords = ['python', 'image', 'optimization', 'clipboard', 'gui']
requires-python = ">=3.10,<3.11"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "clipboard",
    "pillow",
    "pyperclip",
    "pyqt6",
]

[project.urls]
Homepage = "https://github.com/namuan/smol-paste"
Repository = "https://github.com/namuan/smol-paste"
Documentation = "https://github.com/namuan/smol-paste#readme"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "tox-uv",
    "ruff",
    "pyinstaller",
    "radon",
    "xenon",
    "pytest-qt"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY003",
    "TRY300",
    "TRY301",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[project.scripts]
smol-paste = "smol_paste.smol_paste:main"
